[package]
name = "binance-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.52"
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
hex = "0.4.3"
