[package]
name = "binance-spot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bigdecimal = { version = "0.3.0", features = ["serde"] }
reqwest = "0.11.10"
anyhow = "1.0.56"
thiserror = "1.0"
binance-signer = {path = "../signer"}
